Began working on the Project Screen and Project Items List.

--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WCFArchitect.Projects</RootNamespace>
-    <AssemblyName>WAP</AssemblyName>
+    <AssemblyName>WCFArchitect.Projects</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>
