Added the ability to remove a project from a solution and delete it from the disk if desired.

--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -597,6 +597,9 @@
   <ItemGroup>
     <Resource Include="Icons\X32\NetHTTP.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\X32\Delete.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
