--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -74,8 +74,9 @@
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Prospective.Utilities">
-      <HintPath>..\..\..\Prospective\Prospective.Utilities\Build\Prospective.Utilities.dll</HintPath>
+    <Reference Include="Prospective.Utilities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Prospective\Utilities\Build\Prospective.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
